--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
+    "openai": "^4.80.1",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
