--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
+    "marked": "^15.0.6",
     "next": "latest",
     "next-themes": "^0.4.3",
     "openai": "^4.80.1",
@@ -25,6 +28,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
