added docusign test file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docusign-esign": "^8.0.1",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.468.0",
     "next": "latest",
