--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docusign-esign": "^8.0.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.468.0",
     "next": "latest",
